force-app/main/default/objects/Case/fields/Accepted_By__c.field-meta.xml
<CustomField>
    <fullName>Accepted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specialist who accepted (claimed) this case.</description>
    <label>Accepted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Accepted Support Cases</relationshipLabel>
    <relationshipName>Accepted_Support_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>