force-app/main/default/objects/Case/fields/Account_activity__c.field-meta.xml
<CustomField>
    <fullName>Account_activity__c</fullName>
    <inlineHelpText>Based off of the amount of services requested</inlineHelpText>
    <label>Account activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low (12 or less trips a year)</fullName>
            </value>
            <value>
                <fullName>Medium (13-24 trips a year)</fullName>
            </value>
            <value>
                <fullName>High (More than 24 trips a year)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>