force-app/main/default/objects/Case/fields/Account_Closing_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Account_Closing_Admin_Fee__c</fullName>
    <label>DM Admin Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>