force-app/main/default/objects/Case/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>If(NOT(ISPICKVAL(Status, &apos;Closed&apos;)) &amp;&amp; Now()-CreatedDate &lt; 1, &quot;Less than 1 day&quot;,
If(NOT(ISPICKVAL(Status, &apos;Closed&apos;)) &amp;&amp; Now() -CreatedDate &lt; 3, &quot;2-3 days&quot;,
If(NOT(ISPICKVAL(Status, &apos;Closed&apos;)) &amp;&amp; Now() -CreatedDate &lt; 7, &quot;3-7 days&quot;,
If(NOT(ISPICKVAL(Status, &apos;Closed&apos;)) &amp;&amp; Now() -CreatedDate &lt; 15, &quot;7-15 days&quot;,
If(NOT(ISPICKVAL(Status, &apos;Closed&apos;)) &amp;&amp; Now() -CreatedDate &gt; 15, &quot;15 + Days&quot;,
If(ISPICKVAL(Status, &apos;Closed&apos;) &amp;&amp; ClosedDate-CreatedDate &lt; 1, &quot;Less than 1 day&quot;,
If(ISPICKVAL(Status, &apos;Closed&apos;) &amp;&amp; ClosedDate-CreatedDate &lt; 3, &quot;2-3 days&quot;,
If(ISPICKVAL(Status, &apos;Closed&apos;) &amp;&amp; ClosedDate-CreatedDate &lt; 7, &quot;3-7 days&quot;,
If(ISPICKVAL(Status, &apos;Closed&apos;) &amp;&amp; ClosedDate-CreatedDate &lt; 15, &quot;7-15 days&quot;,
If(ISPICKVAL(Status, &apos;Closed&apos;) &amp;&amp; ClosedDate-CreatedDate  &gt; 15, &quot;15 + Days&quot;,
&quot;unknown&quot;)

)
)
)
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <type>Text</type>
</CustomField>