force-app/main/default/objects/Case/fields/All_Exit_Docs_Display__c.field-meta.xml
<CustomField>
    <fullName>All_Exit_Docs_Display__c</fullName>
    <description>Text formula showing exit document completion status. Add to the Related Cases list on Opportunity alongside Case_Completion_Display__c.</description>
    <formula>IF(All_Exit_Docs_Final__c, &quot;✔ All Final&quot;, &quot;⏳ Docs Pending&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exit Docs Status</label>
    <type>Text</type>
</CustomField>