force-app/main/default/objects/Case/fields/Alt_Contact__c.field-meta.xml
<CustomField>
    <fullName>Alt_Contact__c</fullName>
    <label>Alt Contact</label>
    <length>80</length>
    <type>Text</type>
</CustomField>