force-app/main/default/objects/Case/fields/Assigned_To_Data_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Data_Entry_Date__c</fullName>
    <label>Assigned To Data Entry Date</label>
    <type>DateTime</type>
</CustomField>