force-app/main/default/objects/Case/fields/Audit_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Audit_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audit Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4L4s</relationshipName>
    <type>Lookup</type>
</CustomField>