force-app/main/default/objects/Case/fields/Audit_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Audit_Failure_Reason__c</fullName>
    <label>Audit Failure Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B-Admin Fee/Fuel Surcharge/Rebox</fullName>
            </value>
            <value>
                <fullName>C-Rate Updates/Fee Schedules/Minimums</fullName>
            </value>
            <value>
                <fullName>D-Bill Cycle,Rate Table,Review Date,PO</fullName>
            </value>
            <value>
                <fullName>E-Tax/Srvc/Billing/reporting Indicators</fullName>
            </value>
            <value>
                <fullName>F-Info Window</fullName>
            </value>
            <value>
                <fullName>G-Contract Maint-Version/Review date/T&amp;C</fullName>
            </value>
            <value>
                <fullName>H-Company Name/Addr/Div/Dept/Enterprise</fullName>
            </value>
            <value>
                <fullName>I-Sales Territory Info</fullName>
            </value>
            <value>
                <fullName>J-Account Status/Terminations</fullName>
            </value>
            <value>
                <fullName>K-Misc-Incorrect paperwork/authorization</fullName>
            </value>
            <value>
                <fullName>L-Documents not added to DRCi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>