force-app/main/default/objects/Case/fields/Audit_Failure_Reason_Comments__c.field-meta.xml
<CustomField>
    <fullName>Audit_Failure_Reason_Comments__c</fullName>
    <label>Audit Failure Reason Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>