force-app/main/default/objects/Case/fields/Authorization_Number__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Number__c</fullName>
    <description>DB&amp;R authorization</description>
    <label>Authorization Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>