force-app/main/default/objects/Case/fields/Bill_To_Site_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Site_Number__c</fullName>
    <label>Bill To Site Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>