force-app/main/default/objects/Case/fields/Billing_Department__c.field-meta.xml
<CustomField>
    <fullName>Billing_Department__c</fullName>
    <description>Used as merge field in email sent to the DMS billing team</description>
    <inlineHelpText>Required if DMS and Conversion Services selected</inlineHelpText>
    <label>Billing Department</label>
    <length>40</length>
    <type>Text</type>
</CustomField>