force-app/main/default/objects/Case/fields/Billing_Division__c.field-meta.xml
<CustomField>
    <fullName>Billing_Division__c</fullName>
    <description>Used as merge field in email sent to the DMS billing team</description>
    <inlineHelpText>Required if DMS and Conversion Services selected</inlineHelpText>
    <label>Billing Division</label>
    <length>40</length>
    <type>Text</type>
</CustomField>