force-app/main/default/objects/Case/fields/Billing_for_Separator_Sheets__c.field-meta.xml
<CustomField>
    <fullName>Billing_for_Separator_Sheets__c</fullName>
    <description>Used as merge field in email sent to the DMS billing team</description>
    <inlineHelpText>Required if DMS and Conversion Services selected</inlineHelpText>
    <label>Billing for Separator Sheets</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>