force-app/main/default/objects/Case/fields/Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Province__c</fullName>
    <label>Billing State/Province</label>
    <length>20</length>
    <type>Text</type>
</CustomField>