force-app/main/default/objects/Case/fields/Billing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Postal_Code__c</fullName>
    <label>Billing Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>