force-app/main/default/objects/Case/fields/Business_Case_Age__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_Age__c</fullName>
    <label>Business Case Age</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>