force-app/main/default/objects/Case/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Auto-populated from the related Opportunity's Business Unit at Case creation, via Case_Field_Mapping__c / CaseFieldMappingEngine. Text rather than a Picklist deliberately, so this copy can never fail on a value-set mismatch if Opportunity's Business Unit picklist changes.</description>
    <label>Business Unit(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>