force-app/main/default/objects/Case/fields/CAC_Customer_Escalated_Complaint_comment__c.field-meta.xml
<CustomField>
    <fullName>CAC_Customer_Escalated_Complaint_comment__c</fullName>
    <description>This field is created for CAC Executive Escalations Record Type to capture the case Customer&apos;s Escalated Complaints as Part of Story # 26756.Increased character limit as part of # 28840</description>
    <label>Customer&apos;s Escalated Complaint(comments)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>