force-app/main/default/objects/Case/fields/CAC_Days_from_report_to_escalation__c.field-meta.xml
<CustomField>
    <fullName>CAC_Days_from_report_to_escalation__c</fullName>
    <description>This field is created for CAC Executive Escalations Record Type to capture the number of Days before escalation for case as Part of Story # 26756</description>
    <label>Days from report to escalation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>