force-app/main/default/objects/Case/fields/CAC_Inactivate_Request__c.field-meta.xml
<CustomField>
    <fullName>CAC_Inactivate_Request__c</fullName>
    <label>Cancel Inactivate Request Date</label>
    <type>DateTime</type>
</CustomField>