force-app/main/default/objects/Case/fields/CAC_Issue_Reported_Date__c.field-meta.xml
<CustomField>
    <fullName>CAC_Issue_Reported_Date__c</fullName>
    <description>This field is created for CAC Executive Escalations Record Type to capture the case reported date as Part of Story # 26756</description>
    <label>Issue Reported Date</label>
    <type>DateTime</type>
</CustomField>