force-app/main/default/objects/Case/fields/CAC_Last_Contact_Prior_to_Escalation__c.field-meta.xml
<CustomField>
    <fullName>CAC_Last_Contact_Prior_to_Escalation__c</fullName>
    <description>This field is created for CAC Executive Escalations Record Type to capture the date of last contact before escalation for case as Part of Story # 26756</description>
    <label>Last Contact Prior to Escalation</label>
    <type>DateTime</type>
</CustomField>