force-app/main/default/objects/Case/fields/CAC_of_Emails_Prior_to_Escalation__c.field-meta.xml
<CustomField>
    <fullName>CAC_of_Emails_Prior_to_Escalation__c</fullName>
    <description>This field is created for CAC Executive Escalations Record Type to capture the number of Emails before escalation for case as Part of Story # 26756</description>
    <label># of Emails Prior to Escalation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>