force-app/main/default/objects/Case/fields/CAC_Total_Monitor_Solution_Duration__c.field-meta.xml
<CustomField>
    <fullName>CAC_Total_Monitor_Solution_Duration__c</fullName>
    <description>This field is created for CAC Executive Escalations Record Type to capture the case total duration on &apos;Monitor Solution&apos; stage as Part of Story # 26756</description>
    <label>Total Monitor Solution Duration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>