force-app/main/default/objects/Case/fields/CAC_Why_4__c.field-meta.xml
<CustomField>
    <fullName>CAC_Why_4__c</fullName>
    <description>This field is created for CAC Executive Escalations Record Type as Part of Story # 26756. Increased character limit as part of # 28840</description>
    <label>Why 4</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>