force-app/main/default/objects/Case/fields/Case_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Case_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Sales Tools Person who is working the case or the Contracts Admin assigned to the case.</inlineHelpText>
    <label>Case Assigned To:</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>