force-app/main/default/objects/Case/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <description>Value selected by the Sales Tools team

Removed: HelpText as below.
Incident: unplanned event
Service Request: request from end user. Excludes configuration/development
Change Request: request for a change to Salesforce functionality</description>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Add/Update Authorized Personnel</fullName>
                <label>Add / Update Authorized Personnel</label>
            </value>
            <value>
                <fullName>Add / Update Service Address</fullName>
            </value>
            <value>
                <fullName>Add / Update Service Schedule</fullName>
            </value>
            <value>
                <fullName>Billing Question</fullName>
            </value>
            <value>
                <fullName>Change where my Invoice Goes</fullName>
            </value>
            <value>
                <fullName>Charged incorrectly for Service /Service not Complete</fullName>
                <label>Charged incorrectly for Service / Service not Complete</label>
            </value>
            <value>
                <fullName>Do Not Understand Charge</fullName>
            </value>
            <value>
                <fullName>Electronic Payments</fullName>
            </value>
            <value>
                <fullName>Tax Exempt</fullName>
            </value>
            <value>
                <fullName>Update Ownership on my Boxes / Files</fullName>
            </value>
            <value>
                <fullName>What is my Current Pricing</fullName>
            </value>
            <value>
                <fullName>Purchase Order History</fullName>
            </value>
            <value>
                <fullName>Obtain a quote for services</fullName>
            </value>
            <value>
                <fullName>Can I get a copy of my invoice</fullName>
            </value>
            <value>
                <fullName>Update My Purchase Order on my Invoice</fullName>
            </value>
            <value>
                <fullName>Make changes to authorised users of my account</fullName>
            </value>
            <value>
                <fullName>Update my billing contact details</fullName>
            </value>
            <value>
                <fullName>Update or change my account name</fullName>
            </value>
            <value>
                <fullName>New division, sub account or site</fullName>
            </value>
            <value>
                <fullName>Close division, sub account or site</fullName>
            </value>
            <value>
                <fullName>Terminate Account</fullName>
            </value>
            <value>
                <fullName>Copy of invoice or statement</fullName>
            </value>
            <value>
                <fullName>Invoice Charge inquiry</fullName>
            </value>
            <value>
                <fullName>Invoice Payment inquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>