force-app/main/default/objects/Case/fields/Case_Closed_Year__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Year__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE (ClosedDate))) + TEXT(MONTH(DATEVALUE (ClosedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Closed Year</label>
    <type>Text</type>
</CustomField>