force-app/main/default/objects/Case/fields/Case_Comment_Added__c.field-meta.xml
<CustomField>
    <fullName>Case_Comment_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <description>updated by work flow when a case comment is added by someone other than the case owner or a supervisor. NCSP and CAC/R only</description>
    <label>Case Comment Added</label>
    <type>Checkbox</type>
</CustomField>