force-app/main/default/objects/Case/fields/Case_Completion_Pct__c.field-meta.xml
<CustomField>
    <fullName>Case_Completion_Pct__c</fullName>
    <description>Flow-managed completion percentage (0-100). Set by Case_Completion_Update_Flow based on Case Status + Case_Status_Progress__c config. Capped at 90% until All_Exit_Docs_Final__c is true, then reaches 100%.</description>
    <label>Completion %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>