force-app/main/default/objects/Case/fields/Case_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact_Name__c</fullName>
    <label>Case Contact Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>