force-app/main/default/objects/Case/fields/Case_Creation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Case_Creation_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this Case to the Case Creation Rule that triggered its creation. Used by Case_Creation_Trigger_Flow to prevent duplicate Case creation per rule.</description>
    <label>Case Creation Rule</label>
    <referenceTo>Case_Creation_Rule__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>