force-app/main/default/objects/Case/fields/Case_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Category__c</fullName>
    <description>value selected by the Sales tools team and is dependent on Case Category</description>
    <label>Case Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Community/Chat</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Configuration/Development</fullName>
            </value>
            <value>
                <fullName>Data Maintenance</fullName>
            </value>
            <value>
                <fullName>IMGA</fullName>
            </value>
            <value>
                <fullName>Import Request</fullName>
            </value>
            <value>
                <fullName>IT Development</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Outage/Critical Incident</fullName>
            </value>
            <value>
                <fullName>Reports/Dashboards</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Software Request</fullName>
            </value>
            <value>
                <fullName>Territory Alignment</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>User Management</fullName>
            </value>
            <value>
                <fullName>Vendor Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>