force-app/main/default/objects/Case/fields/CFACE__Archive_Date__c.field-meta.xml
<CustomField>
    <fullName>CFACE__Archive_Date__c</fullName>
    <description>Date  time when case was last archived.</description>
    <label>Archived Date</label>
    <type>DateTime</type>
</CustomField>