force-app/main/default/objects/Case/fields/CFACE_Closed_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>CFACE_Closed_Date_Formula__c</fullName>
    <formula>Text(YEAR(datevalue(ClosedDate))) &amp; Text(MONTH(datevalue(ClosedDate)))</formula>
    <label>Closed Date Formula</label>
    <type>Text</type>
</CustomField>